# socket-network

./: .gitignore  .gitmodules  README.md
DMC_2025/: evaluation.py
base/: README.md
base/python/: client.py
pqc/: Dockerfile  README.md  add_new.sh  core  docker-compose.yaml  docker-compose.yml  rp5_openssl.cnf  setup.sh  test.sh
pqc/add_new/liboqs/.CMake/: alg_support.cmake
pqc/add_new/liboqs/src/: CMakeLists.txt  oqsconfig.h.cmake
pqc/add_new/liboqs/src/sig/: sig.c  sig.h
pqc/add_new/liboqs/src/sig/falcon/: CMakeLists.txt  sig_falcon.h  sig_falcon_1024.c  sig_falcon_512.c  sig_falcon_padded_1024.c  sig_falcon_padded_512.c
pqc/add_new/liboqs/src/sig/falcon/pqclean_falcon-1024_bh_aarch64/: api.h  codec.c  common.c  fft.c  fft_tree.c  fpr.h  inner.h  keygen.c  ntt.c  ntt_consts.c  ntt_consts.h  poly.h  poly_float.c  poly_int.c  pqclean.c  rng.c  sampler.c  sign.c  util.c  util.h  vrfy.c
pqc/add_new/liboqs/src/sig/falcon/pqclean_falcon-1024_bh_avx2/: api.h  codec.c  common.c  fft.c  fpr.h  inner.h  keygen.c  pqclean.c  rng.c  sign.c  vrfy.c
pqc/add_new/liboqs/tests/: CMakeLists.txt
pqc/add_new/oqs-provider/: ALGORITHMS.md
pqc/add_new/oqs-provider/oqs-template/: generate.yml  oqs-sig-info.md
pqc/add_new/oqs-provider/oqsprov/: oqs_decode_der2key.c  oqs_encode_key2any.c  oqs_kmgmt.c  oqs_prov.h  oqs_sig.c  oqsdecoders.inc  oqsencoders.inc  oqsprov.c  oqsprov_capabilities.c  oqsprov_keys.c
pqc/add_new/oqs-provider/scripts/: common.py
pqc/add_new/oqs-provider/test/: test_common.c
pqc/src/: CMakeLists.txt  build.sh  n_cert.c  pq_client.c  pq_client_funcs.c  pq_client_params.h  pq_openssl.c  pq_openssl.h  pq_server.c  pq_server.h  pq_server_funcs.c  pq_server_funcs.h  pq_server_params.h  pq_tls.client.h  pq_tls_client.c  pq_tls_server.c  pq_tls_server.h
pqc/src/certificate/: pq_certificate.c  pq_certificate.h  pq_certificate_funcs.c  pq_certificate_funcs.h  pq_certificate_params.h
pqc/src/client/: pq_client.c  pq_client.h  pq_client_funcs.h  pq_client_params.h
pqc/src/server/: pq_server.c  pq_server.h  pq_server_funcs.c  pq_server_funcs.h  pq_server_params.h
pqc/src/test/: CMakeLists.txt  cert_test.c  cert_test.h  cert_test.py  cert_test_funcs.c  cert_test_funcs.h  cert_test_params.h  test.py
python/: docker-compose.yml  server.py
(+398 files in other folders)
